Hateoas y docker